force-app/main/default/objects/BAMApplication__c/BAMApplication__c.object-meta.xml
<CustomObject>
    <description>Object stores configuration information for applications that are exposed through Merchant Portal</description>
    <label>Merchant Portal Application</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchant Portal Applications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>