force-app/main/default/objects/BAMApplication__c/fields/AccessUrl__c.field-meta.xml
<CustomField>
    <fullName>AccessUrl__c</fullName>
    <description>The URL to access the application</description>
    <inlineHelpText>The URL to access the application</inlineHelpText>
    <label>Access Url</label>
    <type>Url</type>
</CustomField>