force-app/main/default/objects/BAMApplication__c/fields/AppKey__c.field-meta.xml
<CustomField>
    <fullName>AppKey__c</fullName>
    <description>External Application Key for API Linking</description>
    <externalId>true</externalId>
    <inlineHelpText>External Application Key for API Linking</inlineHelpText>
    <label>App Key</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>