force-app/main/default/objects/BAMApplication__c/fields/ConfigurationModel__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationModel__c</fullName>
    <description>Sets how Application is exposed to BAM. Per Customer requires an Asset to be created for it to be exposed in BAM for a customer., Private will never be exposed to BAM but allows behind the scenes Applications to be onboarded and exposed through Authorisation API</description>
    <inlineHelpText>Sets how Application is exposed to BAM. Per Customer requires an Asset to be created for it to be exposed in BAM for a customer., Private will never be exposed to BAM but allows behind the scenes Applications to be onboarded and exposed through Auth API</inlineHelpText>
    <label>Configuration Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Customer</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>