force-app/main/default/objects/BAMApplication__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The application product</description>
    <inlineHelpText>The application product</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>BAM_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>