force-app/main/default/objects/BAMApplication__c/fields/ProvisioningAPIUrl__c.field-meta.xml
<CustomField>
    <fullName>ProvisioningAPIUrl__c</fullName>
    <description>API Endpoint to consume when configurations are added or modified for the Application</description>
    <inlineHelpText>API Endpoint to consume when configurations are added or modified for the Application</inlineHelpText>
    <label>Provisioning API Url</label>
    <type>Url</type>
</CustomField>