force-app/main/default/objects/BAMApplication__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <description>The service type of the application which is used by Camunda to determine how authentication is handled.</description>
    <inlineHelpText>The service type of the application which is used by Camunda to determine how authentication is handled.</inlineHelpText>
    <label>Service Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>