force-app/main/default/objects/BAMApplication__c/recordTypes/BAM.recordType-meta.xml
<RecordType>
    <fullName>BAM</fullName>
    <active>true</active>
    <description>Applications relating to the BAM Framework</description>
    <label>BAM</label>
</RecordType>