force-app/main/default/objects/BAMApplication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ShortDescription__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>AppKey__c</columns>
    <columns>Product__c</columns>
    <columns>SVGRefId__c</columns>
    <columns>ProvisioningAPIUrl__c</columns>
    <columns>ValidationAPIUrl__c</columns>
    <columns>DeprovisioningAPIUrl__c</columns>
    <columns>ConfigurationModel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>